tests/error/enum_errors/fun_overwrite_variant_2.err
Error: Duplicate variant (at $FILE:8:4)
  | 
6 | 
7 |     @guppy
8 |     def name(self) -> str:
  |     ^^^^^^^^^^^^^^^^^^^^^^
9 |         return "name"
  | ^^^^^^^^^^^^^^^^^^^^^ Enum `MyEnum` already contains a variant named `name`

Guppy compilation failed due to 1 previous error
